--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
-    "pinia": "^2.2.4",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.9.0",
